# resume-cli

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: jd.txt
resume_cli/: ai_client.py  config.py  extractor.py  main.py  mock_data.py  pdf_parser.py  prompts.py  schemas.py  scorer.py  service.py  web_app.py
resume_cli/static/: index.html
tests/: test_extract_mock.py  test_parse.py  test_trim.py  test_web.py
