[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-cli"
version = "0.1.0"
description = "Resume PDF parser and JD scoring CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
resume-cli = "resume_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
